fix dark mode and responsive

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 745px) {
+@media screen and (max-width: 1000px) {
     body {
         padding: 0;
     }
